# vimrc

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build.sh  coc-settings.json  fixes.sh  my_configs.vim  project-specific.vim  snapshot.vim  update.vim  vimrc.vim
.temp_dirs/undodir/: .gitignore
UltiSnips/: c.snippets  elixir.snippets  go.snippets  markdown.snippets  python.snippets  rust.snippets  sh.snippets  toml.snippets  typescript.snippets  typescriptreact.snippets
ale_linters/cpp/: pac.vim
colors/: peaksea-mod.vim
doc/: runtime.txt  tags
eat/: Cargo.toml
eat/src/: event.rs  keyaction.rs  main.rs
ftplugin/: markdown.vim  rust.vim
indent/: gitcommit.vim  gitrebase.vim
lua/: treesitter.lua
nvim/: coc-settings.json  init.lua  init.vim
plugin/: eat.vim  open_file_under_cursor.vim  watchforchanges.vim
rex/: Cargo.toml
rex/src/: main.rs
rplugin/python3/: eat.py  eat_test.py
snippets/: rust.snippets
sources_forked/dax/after/plugin/: autoreadwatch.vim
sources_forked/dax/ale_linters/cpp/: pac.vim
sources_forked/dax/ftplugin/: markdown.vim
sources_forked/dax/syntax_checkers/c/: check.py  dax.vim
sources_forked/dax/syntax_checkers/cpp/: check.py  dax.vim
sources_forked/peaksea/colors/: peaksea.vim
sources_non_forked/lightline.vim/autoload/lightline/colorscheme/: powerline.vim  wombat.vim
vimrcs/: basic.vim  extended.vim  filetypes.vim  plugins_config.vim
